removing truncate and letter spacing to avoid CLS on mobile devices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,6 +33,5 @@
 }
 
 html {
-  letter-spacing: 0.02em;
   font-family: "Atkinson-Hyperlegible", system-ui, sans-serif;
 }
